--- a/managetrainer/templates/register.html
+++ b/managetrainer/templates/register.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+<h1>Life is Good</h1>
+
 <div class="breadcrumb">
 <h2 class="bg-success">Welcome to Register Page</h2>
 <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
